--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -15,11 +14,13 @@
   },
   "dependencies": {
     "@heroicons/react": "2.2.0",
+    "driver.js": "1.4.0",
     "framer-motion": "12.10.1",
     "next": "16.0.7",
     "next-themes": "0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hot-toast": "2.6.0",
     "zustand": "5.0.4"
   },
   "devDependencies": {
