--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hot-toast": "2.6.0",
+    "react-markdown": "10.1.0",
     "zustand": "5.0.4"
   },
   "devDependencies": {
